# Functionnal

./: CMakeLists.txt
list/: CMakeLists.txt  list.h
list/tests/: CMakeLists.txt  list_immutability.cpp  list_shared.cpp  list_trivial.cpp  list_variadic.cpp
option/: CMakeLists.txt  Config.cmake.in  option.h
option/tests/: CMakeLists.txt  option_trivial.cpp
